# timeturner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  config.toml  timeturner.alfredworkflow
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
alfred/: info.plist
src/: alfred.rs  converting.rs  lib.rs  main.rs  parsing.rs
