[package]
name = "timeturner"
version = "1.8.0"
authors = ["Stephen Duncan <jrduncans@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Command line utility for manipulating date-time strings"
repository = "https://github.com/jrduncans/timeturner"
readme = "README.md"
keywords = ["epoch", "RFC3339", "format", "dates", "alfred"]
categories = ["command-line-utilities", "date-and-time", "value-formatting"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
chrono = "0.4.23"
chrono-tz = "0.8.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
chrono-english = "0.1.7"
humantime = "2.1.0"
