[package]
name = "timeturner"
version = "2.0.0"
authors = ["Stephen Duncan <jrduncans@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command line utility for manipulating date-time strings"
repository = "https://github.com/jrduncans/timeturner"
readme = "README.md"
keywords = ["epoch", "RFC3339", "format", "dates", "alfred"]
categories = ["command-line-utilities", "date-and-time", "value-formatting"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
humantime = "2.1.0"
dateparser = "0.2.0"
