[package]
name = "timeturner"
version = "2.2.0"
authors = ["Stephen Duncan <jrduncans@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Command line utility for manipulating date-time strings"
repository = "https://github.com/jrduncans/timeturner"
readme = "README.md"
keywords = ["epoch", "RFC3339", "format", "dates", "alfred"]
categories = ["command-line-utilities", "date-and-time", "value-formatting"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dateparser = "0.3.1"
humantime = "2.3.0"
speedate = "0.17.0"
